# XMLTV-Import

./: .gitignore  Makefile.am  README.md  Xmltv  configure.ac
.github/workflows/: build.yml  buildbot.yml
CI/: build.sh
dreamcrc/: setup.py
etc/: Makefile.am
etc/epgimport/: Makefile.am  readme.txt
etc/xmltvimport/: Makefile.am  readme.txt
po/: EPGImport.pot  Makefile.am  cs.po  de.mo  de.po  el.mo  el.po  en_GB.po  et.po  fi.po  fr.mo  fr.po  it.po  nl.po  pl.po  ru.mo  ru.po
src/: EPGConfig.py  EPGImport.py  Makefile.am  OfflineImport.py  XLMTVImport.py  XMLTVConfig.py  XMLTVImport.py  __init__.py  boot.py  dreamcrc.c  epgdat.py  epgdat_importer.py  gen_xmltv.py  log.py  plugin.py  setup.py  setup_translate.py  xmltvconverter.py
src/EPGImport/: EPGConfig.py  EPGImport.py  ExpandableSelectionList.py  Makefile.am  OfflineImport.py  __init__.py  boot.py  dreamcrc.c  epgdat.py  epgdat_importer.py  filterCustomChannel.py  filtersServices.py  gen_xmltv.py  import_source.py  log.py  plugin.py  setup.xml  xmltvconverter.py
src/EPGImport/locale/: EPGImport.mo  EPGImport.pot  Makefile.am  ar.mo  ar.po  cs.mo  cs.po  de.mo  de.po  el.mo  el.po  en.mo  en.po  en_GB.mo  en_GB.po  es.mo  es.po  et.mo  et.po  fi.mo  fi.po  fr.mo  fr.po  hu.mo  hu.po  it.mo  it.po  lt.mo  lt.po  nb.mo  nb.po  nl.mo  nl.po  pl.mo  pl.po  pt.mo  pt.po  ru.mo  ru.po  sk.mo  (+11 more)
